--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- Tea logo is shown , and id namme is assigned, to refer back to top-->
-    <img src="/Images/tea.jpg" id="logo" alt="tea logo" />
+    <img src="![tea](https://user-images.githubusercontent.com/78452735/119951352-79e77900-bfb9-11eb-8d31-9177fcc775f5.jpg)" id="logo" alt="tea logo" />
     <br />
     <!-- Heading vth types of tea -->
     <h1>Types of Tea</h1>
