--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- 1. Irani Tea -->
     <h2>Irani tea</h2>
     <!-- Image  of Irani Tra -->
-    <img src="/Images/chai.jpeg" alt="Irani tea" />
+    <img src="![tea](https://user-images.githubusercontent.com/78452735/119951352-79e77900-bfb9-11eb-8d31-9177fcc775f5.jpg)" alt="Irani tea" />
     <!-- To make paragraph look good, style function is used, and paragraph will come within 50% of the page -->
     <p style="width: 50%">
       There is an interesting story behind Irani chai's origin in Hyderabad. It
