--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- 1. Irani Tea -->
     <h2>Irani tea</h2>
     <!-- Image  of Irani Tra -->
-    <img src="![chai](https://user-images.githubusercontent.com/78452735/119951395-88ce2b80-bfb9-11eb-99f0-31fd85057c3d.jpeg)" alt="Irani tea" />
+    <img src="file:///C:/Users/prade/OneDrive/Desktop/pradeep458.github.io/chai.jpeg" alt="Irani tea" />
     <!-- To make paragraph look good, style function is used, and paragraph will come within 50% of the page -->
     <p style="width: 50%">
       There is an interesting story behind Irani chai's origin in Hyderabad. It
