--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- Tea logo is shown , and id namme is assigned, to refer back to top-->
-    <img src="![tea](https://user-images.githubusercontent.com/78452735/119951352-79e77900-bfb9-11eb-8d31-9177fcc775f5.jpg)" id="logo" alt="tea logo" />
+    <img src="/Images/tea.jpg" id="logo" alt="tea logo" />
     <br />
     <!-- Heading vth types of tea -->
     <h1>Types of Tea</h1>
@@ -28,7 +28,7 @@
     <!-- 1. Irani Tea -->
     <h2>Irani tea</h2>
     <!-- Image  of Irani Tra -->
-    <img src="file:///C:/Users/prade/OneDrive/Desktop/pradeep458.github.io/chai.jpeg" alt="Irani tea" />
+    <img src="/Images/chai.jpeg" alt="Irani tea" />
     <!-- To make paragraph look good, style function is used, and paragraph will come within 50% of the page -->
     <p style="width: 50%">
       There is an interesting story behind Irani chai's origin in Hyderabad. It
