--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- Tea logo is shown , and id namme is assigned, to refer back to top-->
-    <img src="/Images/tea.jpg" id="logo" alt="tea logo" />
+    <img src="tea.jpg" id="logo" alt="tea logo" />
     <br />
     <!-- Heading vth types of tea -->
     <h1>Types of Tea</h1>
