--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     </ul>
     <br />
     <!-- Tea powder big logo is shown -->
-    <img src="/Images/teapowder.jpg" width="60%" alt="tea powder" />
+    <img src="teapowder.jpg" width="60%" alt="tea powder" />
     <!-- Feature products -->
     <h1>Featured Products</h1>
     <!-- 1. Irani Tea -->
     <h2>Irani tea</h2>
     <!-- Image  of Irani Tra -->
-    <img src="/Images/chai.jpeg" alt="Irani tea" />
+    <img src="chai.jpeg" alt="Irani tea" />
     <!-- To make paragraph look good, style function is used, and paragraph will come within 50% of the page -->
     <p style="width: 50%">
       There is an interesting story behind Irani chai's origin in Hyderabad. It
@@ -43,7 +43,7 @@
     >
     <!-- Assam Tea -->
     <h2>Assam Tea</h2>
-    <img src="/Images/assamtea.jpg" alt="Assam tea" />
+    <img src="assamtea.jpg" alt="Assam tea" />
     <p style="width: 50%">
       The story of Assam tea is about being discovered by a Scottish adventurer,
       Robert Bruce, who noticed tea-like plants growing wild near Rangpur. This
