--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- 1. Irani Tea -->
     <h2>Irani tea</h2>
     <!-- Image  of Irani Tra -->
-    <img src="chai.jpeg" alt="Irani tea" />
+    <img src="https://github.com/pradeep458/pradeep458.github.io/blob/main/chai.jpeg" alt="Irani tea" />
     <!-- To make paragraph look good, style function is used, and paragraph will come within 50% of the page -->
     <p style="width: 50%">
       There is an interesting story behind Irani chai's origin in Hyderabad. It
