--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- 1. Irani Tea -->
     <h2>Irani tea</h2>
     <!-- Image  of Irani Tra -->
-    <img src="https://github.com/pradeep458/pradeep458.github.io/blob/main/chai.jpeg" alt="Irani tea" />
+    <img src="chai.jpeg" alt="Irani tea" />
     <!-- To make paragraph look good, style function is used, and paragraph will come within 50% of the page -->
     <p style="width: 50%">
       There is an interesting story behind Irani chai's origin in Hyderabad. It
@@ -60,7 +60,7 @@
     >
     <!-- China Tea -->
     <h2>China Tea</h2>
-    <img src="/Images/chinatea.jpeg" alt="china tea" />
+    <img src="chinatea.jpeg" alt="china tea" />
     <p style="width: 50%">
       Tea is the national drink in China. In addition to its prominence in
       Chinese culture, tea also claims many health benefits, making it a popular
@@ -72,7 +72,7 @@
     >
     <!-- Benefits of drinking Tea -->
     <h2>Benefits of Drinking Tea</h2>
-    <img src="/Images/tealove.jpeg" alt="Tea love" />
+    <img src="tealove.jpeg" alt="Tea love" />
     <p style="width: 50%">
       Research shows it may be the most effective tea in fighting various forms
       of cancer thanks to its high level of antioxidants. White tea may also be
