--- a/About us.html
+++ b/About us.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- Tea logo is shown , and id namme is assigned, to refer back to top-->
-    <img src="/Images/tea.jpg" id="logo" alt="tea logo" />
+    <img src="tea.jpg" id="logo" alt="tea logo" />
     <br />
     <!-- Heading vth types of tea -->
     <h1>Types of Tea</h1>
@@ -16,13 +16,13 @@
     <!--  4 links are created, like unordered list. dummy link is used here. -->
     <ul>
       <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
+      <li><a href="About us">About us</a></li>
       <li><a href="#">Numbers</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
     <br />
     <!-- Tea powder big logo is shown -->
-    <img src="/Images/teapowder.jpg" width="60%" alt="tea powder" />
+    <img src="teapowder.jpg" width="60%" alt="tea powder" />
     <!-- Feature products -->
     <h1>About us</h1>
     <p>
