--- a/Contact.html
+++ b/Contact.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- Tea logo is shown , and id namme is assigned, to refer back to top-->
-    <img src="/Images/tea.jpg" id="logo" alt="tea logo" />
+    <img src="tea.jpg" id="logo" alt="tea logo" />
     <br />
     <!-- Heading vth types of tea -->
     <h1>Types of Tea</h1>
@@ -22,7 +22,7 @@
     </ul>
     <br />
     <!-- Tea powder big logo is shown -->
-    <img src="/Images/teapowder.jpg" width="60%" alt="tea powder" />
+    <img src="teapowder.jpg" width="60%" alt="tea powder" />
     <!-- Feature products -->
     <h1>Contact details</h1>
     <form action="">
