--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing=30>
     <tr>
-      <td> <img src="images/panja.png" alt="Man of Masses"></td>
+      <td> <img src="panja.png" alt="Man of Masses"></td>
       <td>
         <h1>Pradeep Chandra</h1>
         <p><em>Masters Student</em></p>
@@ -48,7 +48,7 @@
   <h3>Hobbies</h3>
   <ol>
     <li>Watching movies</li>
-    <img src="images/Agent.png" alt="Naveen polishetty">
+    <img src="Agent.png" alt="Naveen polishetty">
     <li>walking</li>
     <li><a href="studying.html">studying</a></li>
     <li><a href="contact.html" target="_blank">Contact</a></li>
