--- a/index.html
+++ b/index.html
@@ -1,79 +1,97 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-
-<head>
-  <meta charset="utf-8">
-  <title>pradeep's personal website</title>
-</head>
-
-<body>
-  <table cellspacing=30>
-    <tr>
-      <td> <img src="panja.png" alt="Man of Masses"></td>
-      <td>
-        <h1>Pradeep Chandra</h1>
-        <p><em>Masters Student</em></p>
-        <em>Department of <a href="https://en.wikipedia.org/wiki/Computer_science" target="_blank">Computer science</a></em>
-        <p>I am a masters student studying Computer Science at Rowan university, Glassborro, Newjersey and my country is India .</p>
-      </td>
-    </tr>
-
-
-  </table>
-  <hr size="3">
-  <h3>Education qualifications</h3>
-  <table cellspacing=10>
-    <thead>
-      <tr>
-        <th>Year</th>
-        <th>study</th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <tr>
-        <td>2021</td>
-        <td>Masters in Computer Science</td>
-      </tr>
-
-      <tr>
-        <td>2015-2019</td>
-        <td>studied my Bachelors in Electrical and Electronics engineering</td>
-      </tr>
-    </tbody>
-
-
-  </table cellspacing="10px">
-  <hr / border="3">
-  <h3>Hobbies</h3>
-  <ol>
-    <li>Watching movies</li>
-    <img src="Agent.png" alt="Naveen polishetty">
-    <li>walking</li>
-    <li><a href="studying.html">studying</a></li>
-    <li><a href="contact.html" target="_blank">Contact</a></li>
-  </ol>
-  <hr / border="3">
-
-
-  <h3>Skills</h3>
-  <table cellspacing=10>
-    <tr>
-      <td>HTML</td>
-      <td>⭐⭐⭐⭐</td>
-      <td>Matlab</td>
-      <td>⭐⭐⭐</td>
-
-    </tr>
-    <tr>
-      <td>CSS</td>
-      <td>⭐⭐⭐</td>
-      <td>Cooking</td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-
-
-  </table>
-</body>
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TEA</title>
+  </head>
+  <body>
+    <!-- Tea logo is shown , and id namme is assigned, to refer back to top-->
+    <img src="/Images/tea.jpg" id="logo" alt="tea logo" />
+    <br />
+    <!-- Heading vth types of tea -->
+    <h1>Types of Tea</h1>
+    <br />
+    <!--  4 links are created, like unordered list. dummy link is used here. -->
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="About us.html" target="_blank">About us</a></li>
+      <li><a href="Numbers.html" target="_blank">Numbers</a></li>
+      <li><a href="Contact.html" target="_blank">Contact</a></li>
+    </ul>
+    <br />
+    <!-- Tea powder big logo is shown -->
+    <img src="/Images/teapowder.jpg" width="60%" alt="tea powder" />
+    <!-- Feature products -->
+    <h1>Featured Products</h1>
+    <!-- 1. Irani Tea -->
+    <h2>Irani tea</h2>
+    <!-- Image  of Irani Tra -->
+    <img src="/Images/chai.jpeg" alt="Irani tea" />
+    <!-- To make paragraph look good, style function is used, and paragraph will come within 50% of the page -->
+    <p style="width: 50%">
+      There is an interesting story behind Irani chai's origin in Hyderabad. It
+      is said that Persian immigrants came to Mumbai's port in the last century
+      and prior to that in search of a better life and to trade. From Mumbai,
+      they migrated to Pune and then to Hyderabad. Along with them came the
+      concept of Irani chai.
+      <!-- link, for more details -->
+    </p>
+    <a href="https://en.wikipedia.org/wiki/Irani_caf%C3%A9" target="_blank"
+      >for more details</a
+    >
+    <!-- Assam Tea -->
+    <h2>Assam Tea</h2>
+    <img src="/Images/assamtea.jpg" alt="Assam tea" />
+    <p style="width: 50%">
+      The story of Assam tea is about being discovered by a Scottish adventurer,
+      Robert Bruce, who noticed tea-like plants growing wild near Rangpur. This
+      was in 1823 and Bruce was on a trading mission. Bruce was reportedly
+      directed by Maniram Dewan to Bessa Gam who was the local Singpho chief.
+      Bessa Gam showed Bruce how local tribesmen (known as the Singhpos) brewed
+      tea from leaves of this bush. Bruce made an arrangement with the tribal
+      chief to give him samples of these tea leaves with seeds, as he planned on
+      having them scientifically examined. Robert Bruce passed away a few years
+      later, never having seen this plant being properly classified.
+    </p>
+    <a href="https://en.wikipedia.org/wiki/Assam_tea" target="_blank"
+      >for more details</a
+    >
+    <!-- China Tea -->
+    <h2>China Tea</h2>
+    <img src="/Images/chinatea.jpeg" alt="china tea" />
+    <p style="width: 50%">
+      Tea is the national drink in China. In addition to its prominence in
+      Chinese culture, tea also claims many health benefits, making it a popular
+      drink worldwide. There are several types of Chinese tea, which vary in
+      degree of fermentation and processing.
+    </p>
+    <a href="https://en.wikipedia.org/wiki/Chinese_tea" target="_blank"
+      >for more details</a
+    >
+    <!-- Benefits of drinking Tea -->
+    <h2>Benefits of Drinking Tea</h2>
+    <img src="/Images/tealove.jpeg" alt="Tea love" />
+    <p style="width: 50%">
+      Research shows it may be the most effective tea in fighting various forms
+      of cancer thanks to its high level of antioxidants. White tea may also be
+      good for your teeth since it contains a high source of fluoride, catechins
+      and tannins that can strengthen teeth, fight plaque, and make it more
+      resistant to acid and sugar.
+    </p>
+    <a
+      href="https://www.pennmedicine.org/updates/blogs/health-and-wellness/2019/december/health-benefits-of-tea"
+      target="_blank"
+      >for more details</a
+    >
+    <!-- copy right subscript and  year also mention with that -->
+    <h3>copyright &copy;2021</h3>
+    <!-- If u click on this link, it should refer back to top. So, # and  Id attribute (logo) is used, and this Id name is assigned to the image element(at the starting of the body)-->
+    <br />
+    <br />
+    <br />
+    <br />
+    <a href="#logo">Back to top</a>
+  </body>
 </html>
