--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- Tea logo is shown , and id namme is assigned, to refer back to top-->
-    <img src="/Images/tea.jpg" id="logo" alt="tea logo" />
+    <img src="tea.jpg" id="logo" alt="tea logo" />
     <br />
     <!-- Heading vth types of tea -->
     <h1>Types of Tea</h1>
@@ -22,13 +22,13 @@
     </ul>
     <br />
     <!-- Tea powder big logo is shown -->
-    <img src="/Images/teapowder.jpg" width="60%" alt="tea powder" />
+    <img src="teapowder.jpg" width="60%" alt="tea powder" />
     <!-- Feature products -->
     <h1>Featured Products</h1>
     <!-- 1. Irani Tea -->
     <h2>Irani tea</h2>
     <!-- Image  of Irani Tra -->
-    <img src="/Images/chai.jpeg" alt="Irani tea" />
+    <img src="chai.jpeg" alt="Irani tea" />
     <!-- To make paragraph look good, style function is used, and paragraph will come within 50% of the page -->
     <p style="width: 50%">
       There is an interesting story behind Irani chai's origin in Hyderabad. It
@@ -43,7 +43,7 @@
     >
     <!-- Assam Tea -->
     <h2>Assam Tea</h2>
-    <img src="/Images/assamtea.jpg" alt="Assam tea" />
+    <img src="assamtea.jpg" alt="Assam tea" />
     <p style="width: 50%">
       The story of Assam tea is about being discovered by a Scottish adventurer,
       Robert Bruce, who noticed tea-like plants growing wild near Rangpur. This
@@ -60,7 +60,7 @@
     >
     <!-- China Tea -->
     <h2>China Tea</h2>
-    <img src="/Images/chinatea.jpeg" alt="china tea" />
+    <img src="chinatea.jpeg" alt="china tea" />
     <p style="width: 50%">
       Tea is the national drink in China. In addition to its prominence in
       Chinese culture, tea also claims many health benefits, making it a popular
@@ -72,7 +72,7 @@
     >
     <!-- Benefits of drinking Tea -->
     <h2>Benefits of Drinking Tea</h2>
-    <img src="/Images/tealove.jpeg" alt="Tea love" />
+    <img src="tealove.jpeg" alt="Tea love" />
     <p style="width: 50%">
       Research shows it may be the most effective tea in fighting various forms
       of cancer thanks to its high level of antioxidants. White tea may also be
