--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <div class="top">
 
-    <img class="top-cloud" src="images/cloud.png" alt="mountain">
+    <img class="top-cloud" src="/images/cloud.png" alt="mountain">
 
     <h1>I'm Pradeep Chandra</h1>
 
