--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <section id="title">
 <div class="container-fluid">
     <nav class="navbar  navbar-expand-lg  navbar-dark ">
-      <a class="navbar-brand " href="#" > <img width="300px" src="images/cigarlogo1.png"  alt=""></a>
+      <a class="navbar-brand " href="#" > <img width="300px" src="cigarlogo1.png"  alt=""></a>
 
 
 
@@ -70,7 +70,7 @@
 
       </div>
       <div class="col-xl-6 col-md-12 phone" >
-        <img  src="images/iphone6.png" id="cigarpic" alt="cigarpic">
+        <img  src="iphone6.png" id="cigarpic" alt="cigarpic">
       </div>
     </div>
 </div>
@@ -92,7 +92,7 @@
       <h3 class="heading-icon">Making toys</h3>
        <p class="para-icon">cigarette litters are reused in making soft toys.</p>  </div>
 
-  <div class="text-align col-sm-12 col-md-12 col-xl-4 "><img id="fish" src="images/fish.png" width="60" height="60" />
+  <div class="text-align col-sm-12 col-md-12 col-xl-4 "><img id="fish" src="fish.png" width="60" height="60" />
           <h3 class="heading-icon">Saving Marine life</h3>
         <p class="para-icon">Chemicals from just one filtered cigarette butt can kill a fish living in one bucket of water.</p></div>
   </div>
@@ -106,12 +106,12 @@
     <h2 class="whitetext-h2 ">Recycling cigarette butts saves  the creatures from being killed .</h2>
     <div class="row why-recycle">
       <div class="col-12 col-md-12 col-xl-5">
-    <img class="smallbird"src="images/smallbird.jpg" alt="dog-profile">
+    <img class="smallbird"src="smallbird.jpg" alt="dog-profile">
   <p class=" para-white">
     Throwing cigarettes effects on birds and other creatures as well.
   </p> </div>
     <div class= "col-12 col-md-12 col-xl-6">
-    <img  class="smallbird" src="images/bottle1.jpg" />
+    <img  class="smallbird" src="bottle1.jpg" />
     <p class="para-white">
       Fill the bottle challenge held in Spain,shows us the amount of  cigarette butts littered across the beach.
     </p>
@@ -135,7 +135,7 @@
       <div class="col-12 col-sm-12 col-xl-12">
 
 
-      <img class="big-teddy" src="images/bigteddy.jpg" class="d-block w-100" alt="...">
+      <img class="big-teddy" src="bigteddy.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h2 >Cutiee Teddy</h2>
         <!-- <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p> -->
@@ -144,7 +144,7 @@
       </div>
 
     <div class="carousel-item" >
-      <img class="big-teddy" src="images/minion.jpg" class="d-block w-100" alt="...">
+      <img class="big-teddy" src="minion.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h2 > Cutie pie Minions</h2>
         <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> -->
