--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
       </div>
       <div class="col-xl-6 col-md-12 phone" >
-        <img  src="iphone6.png" id="cigarpic" alt="cigarpic">
+        <img  src="cigarlogo.png" id="cigarpic" alt="cigarpic">
       </div>
     </div>
 </div>
