--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
 
   <section id="pricing">
 <div class="container">
-    <h2 class="whitetext-h2 font-h2">A Plan for Every Dog's Needs</h2>
-    <p class="para-white">Simple and affordable price plans for your and your dog.</p>
+    <h2 class="whitetext-h2 font-h2">A Plan for Every Children's Smile</h2>
+    <p class="para-white">Simple and affordable price plans for your children.</p>
 
 <div class="row">
     <div class="card-deck " style="width:100%">
