--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
 
   <div class="col-12 col-sm-6 col-xl-4">
     <div class="card" >
-      <h3>Chihuahua</h3>
-      <h2>Free</h2>
+      <h3>Teddy</h3>
+      <h2>Hug</h2>
       <div class="card-body">
         <p>5 Matches Per Day</p>
         <p>10 Messages Per Day</p>
@@ -189,7 +189,7 @@
 </div>
   <div class="col-12 col-sm-6 col-xl-4">
     <div class="card"  >
-      <h3>Labrador</h3>
+      <h3>Minions</h3>
       <h2>$49 / mo</h2>
       <div class="card-body">
         <p>Unlimited Matches</p>
@@ -204,7 +204,7 @@
   <div class="card" >
 
 
-          <h3>Mastiff</h3>
+          <h3>Puppy</h3>
           <h2>$99 / mo</h2>
       <div class="card-body">
             <p>Pirority Listing</p>
